--- a/OneDrive_2022-09-05/Lab Assignments/selectors.html
+++ b/OneDrive_2022-09-05/Lab Assignments/selectors.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 	<meta charset="UTF-8">
 	<title>Selectors Exercise</title>
 	<style>
+	
 		section{
 			border:1px solid #CACACA;
 			border-radius: 1px;
@@ -50,8 +53,17 @@
 		}
 	</style>
 
+ 
+
+
+
+
+
 </head>
 <body>
+	 
+
+
 	<header>
 		<h1>Welcome to JQuery Course</h1>
 	</header>
@@ -81,7 +93,7 @@
 			<figcaption>Fig.2 - Pepsi</figcaption>
 		</figure>
 		<figure>
-			<img src="img/Lemon.png" alt="" width="100" height="100">
+			<img class="limon" src="img/Lemon.png" alt="" width="100" height="100">
 			<figcaption>Fig.3 - Lemon Juice</figcaption>
 		</figure>
 		<figure>
@@ -135,10 +147,58 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
 
-$(".container2 a").each(function(){
-     if($(this).atrr("href").includes("http://www.google.com"))
-     this.textContent = "GOOGLE"
+// $(document).ready(function(){
+
+// 1.  
+// // how to get class name
+// var colorx=["red","green","blue"];
+// var  div=["cyan","blue","orange"];
+// $(".container1 div").each(function(i){
+// 	$(this).css("background-color",colorx[i] ); 
+// 	$(this).css("color",div[i] ); 
+ 
+// })
+// ,,,,,,,,,,,,,,,,,,
+// 2.
+// https://www.w3schools.com/jquery/jquery_selectors.asp
+
+ 
+// $(".container2 a[href*=google").text("google")
+// $(".container2 a[href$=org").text("IEEE")
+// $(".container2 a[href^=org").text("Facebook")
+// $(".container2 a[href^=org").append("<b>Appended text</b>");
+
+
+// });
+// 3
+
+// Attr The attr() method sets or returns attributes and values of the selected elements.
+
+$(document).ready(function(){
+
+// $(".container3 figure:nth-child(3) img").Attr("src","img/orange.png");
+
+
+// $(".limon").attr({src:img/orange.png,text:figer limon} )
+
+// $(".container3 figure:nth-child(3) figcaption").text("figer3 orang");
+$(". figcaption:contains(lemon)").text("figer3 orang");
 })
+// 4
+$(".container4 td[class*='my-name']").css("color","blue")
+$(".container4 td:nth-child(odd)").css("color","red")
+$(".container4 tr:last>td:eq(1)").css("font-weight","bold")
+
+
+// 5
+$(".container5   ul li: eq(1)" ).css("font-style","italic");
+$(".container5  ol  li :eq(1)" ).css("color","red");
+
+
+
+
+
+
 </script>
 </body>
 </html>
